install tmux plugin manager

--- a/mac/brew/Brewfile
+++ b/mac/brew/Brewfile
@@ -39,6 +39,7 @@ brew "licensefinder"
 brew "mas"
 brew "mycli"
 brew "protobuf"
+brew "python-setuptools"
 brew "mysql"
 brew "mdcat"
 brew "p7zip"
