--- a/mac/tmux/tmux.conf
+++ b/mac/tmux/tmux.conf
@@ -1,33 +1,49 @@
-# prefixをC-tに変更
+#===================================
+# 基本設定
+#===================================
+# プレフィックスキーをC-tに変更
 unbind C-b
 set-option -g prefix C-t
 bind C-t send-prefix
-# tmux内で立ち上がるシェル
-set-option -g default-shell /bin/zsh
-# コピーモードでの操作をviモードに
-set-window-option -g mode-keys vi
-# 履歴の行数
-set-option -g history-limit 50000
-set -sg escape-time 1
-set -g base-index 1
 
-# 画面スクロール
+# シェル設定
+set-option -g default-shell /bin/zsh
+
+# viモードを有効化
+set-window-option -g mode-keys vi
+
+# その他の基本設定
+set-option -g history-limit 50000  # 履歴制限
+set -sg escape-time 1              # キー入力のディレイを減らす
+set -g base-index 1               # ウィンドウのインデックスを1から始める
+
+#===================================
+# マウス設定
+#===================================
 set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# ドラッグでコピー
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# ステータスラインの色
+#===================================
+# 見た目
+#===================================
+# ステータスバーの設定
 set-option -g status-bg "colour7"
-# カレントのステータスは色を変える
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
-# ステータスラインにクリップボードの中身を表示
 set -g status-right "Clip:#(pbpaste | head -1)"
 
-# Ctrlを押しながらペインの基本動作
+#===================================
+# キーバインド
+#===================================
+# ウィンドウ操作
 bind C-n next-window
 bind C-p previous-window
+bind C-c new-window -c "#{pane_current_path}"
+bind ^c new-window -c "#{pane_current_path}"
+
+# ペイン分割
+bind | split-window -hc '#{pane_current_path}'
+bind - split-window -vc '#{pane_current_path}'
 
 # ペイン間の移動
 bind C-h select-pane -L
@@ -35,7 +51,7 @@ bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
 
-# ペイン境界の移動
+# ペインサイズの変更
 bind -r h resize-pane -L
 bind -r j resize-pane -D
 bind -r k resize-pane -U
@@ -45,30 +61,21 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# コピーモードで取得したら即クリップボードへ
+# コピーモード
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy -bi"
 
-# 全ペインの操作
-bind Space set-window-option synchronize-panes
-
-# カレントディレクトリをクリップボードに
-bind C-d run-shell 'echo #{pane_current_path} | tr -d "\n" | pbcopy'
-
-bind ^c new-window -c "#{pane_current_path}"
-bind | split-window -hc '#{pane_current_path}'
-bind - split-window -vc '#{pane_current_path}'
+# その他の便利な機能
+bind Space set-window-option synchronize-panes  # 全ペイン同時操作
+unbind C-d
+bind C-d run-shell 'echo #{pane_current_path} | tr -d "\n" | pbcopy'  # カレントパスをクリップボードにコピー
 
 #===================================
-# tpm - Tmux Plugin Manager
+# プラグイン
 #===================================
-
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Initialize TMUX plugin manager
-# (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-
